// Copyright 2024 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package hello;

option go_package = "demo/proto;hello";

// HelloService 是一个简单的问候服务
service HelloService {
  // SayHello 是一个简单的 Unary RPC
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  
  // SayHelloStream 是一个 Server Streaming RPC
  rpc SayHelloStream (HelloRequest) returns (stream HelloReply) {}
}

// HelloRequest 是请求消息
message HelloRequest {
  // name 是要问候的名字
  string name = 1;
}

// HelloReply 是响应消息
message HelloReply {
  // message 是问候消息
  string message = 1;
  // timestamp 是响应时间戳
  int64 timestamp = 2;
}

